--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
         <div class="message-box">
           <h2><b>Education</b></h2>
           <p>
-            <li>• M.S. in Applied Data Science from the University of Chicago</li>
-            <li>• B.Sc. in Applied Statistics and Analytics from Narsee Monjee Institute of Management Studies</li>
+            <p>• M.S. in Applied Data Science from the University of Chicago</p>
+            <p>• B.S. in Applied Statistics and Analytics from Narsee Monjee Institute of Management Studies</p>
           </p>
 
           <!--<a href="#" class="sim-btn btn-hover-new" data-text="Download CV"><span>Download CV</span></a> -->
